css/parser/tests/last_declaration_without_semi_strict.out
css/parser/tests/last_declaration_without_semi_strict.css:4:1: error: expecting ";"
    2 | .test {
    3 |     color: green
    4 | }
      | ^